# dotui

./: README.md
docs/adr/: 001-Framework.md  002-Architecture.md  003-Not-Just-a-Dotfile-Manager.md  004-Other-TUI-Ideas.md  README.md
docs/adr/CS6750-Final-Project/: HCI-Project-King.tex
docs/adr/CS6750-Final-Project/Survery/: pyproject.toml  survey_2_results.json
docs/adr/CS6750-Final-Project/Survey/: survey-parser.py  survey_results.json
