[tool.poetry]
name = "survey"
version = "0.0.5"
description = "Parsing M4 Survey Results"
authors = ["Kyle King <KyleKing@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
loguru = ">=0.6.0"
pandas = ">=1.4.3"
plotly = ">=5.9.0"
psutil = ">=5.9.1"
requests = ">=2.28.1"
wordcloud = ">=1.8.2"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]
pdbpp = ">=0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
